[tool.poetry]
name = "spider-proxy-pool"
version = "0.1.0"
description = "供爬虫使用的免费ip代理池"
authors = ["xuefeng365 <120158568@qq.com>"]
readme = "README.md"
packages = [{include = "spider_proxy_pool"}]

[tool.poetry.dependencies]
python = "^3.7"
apscheduler = "^3.10.0"
werkzeug = "^2.2.2"
flask = "^2.2.2"
requests = "^2.28.2"
click = "^8.1.3"
gunicorn = "^20.1.0"
lxml = "^4.9.2"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
